@@ -1,4 +1,10 @@
-$Id: ChangeLog 4321 2016-05-10 13:43:10Z chrfranke $
+$Id: ChangeLog 4322 2016-05-31 20:35:59Z chrfranke $
+
+2016-05-31  Christian Franke  <franke@computer.org>
+
+	drivedb.h:
+	- HGST Ultrastar He6/He8: attribute 22 "Helium_Level"
+	- Western Digital Red: 8TB, attribute 22 "Helium_Level"
 
 2016-05-10  Christian Franke  <franke@computer.org>
 
